--- a/TG12.html
+++ b/TG12.html
@@ -602,7 +602,7 @@ const MONETAG_LINKS = [
     "https://otieu.com/4/8257975"
 ];
 
-const DOWNLOAD_LINK = "https://filedollar.top/Zvqzl0A6zaD2";
+const DOWNLOAD_LINK = "https://filedollar.top/BnkmW7E0mR0y";
 
 // Track used links to avoid repetition
 let usedLinks = [];
