--- a/TG11.html
+++ b/TG11.html
@@ -602,7 +602,7 @@ const MONETAG_LINKS = [
     "https://otieu.com/4/8257975"
 ];
 
-const DOWNLOAD_LINK = "https://filesray.com/1jar3XAQz2dD/file";
+const DOWNLOAD_LINK = "https://filedollar.top/Zvqzl0A6zaD2";
 
 // Track used links to avoid repetition
 let usedLinks = [];
