--- a/view14.html
+++ b/view14.html
@@ -394,7 +394,7 @@
 // AD LINKS
 const PRIMARY_AD_LINK = "https://otieu.com/4/8251888";
 const SECONDARY_AD_LINK = "https://otieu.com/4/8195375";
-const DOWNLOAD_LINK = "https://viralph.player4me.online/#ev5h6&dl=1";
+const DOWNLOAD_LINK = "https://viralph.player4me.online/#8zvcx&dl=1";
 
 /* ================= FLOW ================= */
 function startDownload() {
