--- a/TG33.html
+++ b/TG33.html
@@ -603,7 +603,7 @@ const MONETAG_LINKS = [
     "https://otieu.com/4/8257975"
 ];
 
-const DOWNLOAD_LINK = "https://filedollar.top/2WVGrVvMGkx7";
+const DOWNLOAD_LINK = "https://filedollar.top/EL73gAKWG9Ba";
 
 // Track used links to avoid repetition
 let usedLinks = [];
