--- a/TG42.html
+++ b/TG42.html
@@ -602,7 +602,7 @@ const MONETAG_LINKS = [
     "https://otieu.com/4/8257975"
 ];
 
-const DOWNLOAD_LINK = "https://filedollar.top/jar3XLNZ32dD";
+const DOWNLOAD_LINK = "https://filedollar.top/LK0G14Lez917";
 
 // Track used links to avoid repetition
 let usedLinks = [];
