--- a/TG40.html
+++ b/TG40.html
@@ -603,7 +603,7 @@ const MONETAG_LINKS = [
     "https://otieu.com/4/8257975"
 ];
 
-const DOWNLOAD_LINK = "https://filedollar.top/Xkrzox0WGBOR";
+const DOWNLOAD_LINK = "https://filedollar.top/jar3XLNZ32dD";
 
 // Track used links to avoid repetition
 let usedLinks = [];
